# providers

./: AGENTS.md  Cargo.toml  Dockerfile  auth.example.json
crates/provider-codex-auth/: Cargo.toml
crates/provider-codex-auth/src/services/: auth.rs
crates/provider-server/: Cargo.toml
crates/provider-server/src/: lib.rs  main.rs
crates/provider-server/src/handlers/: health.rs  mod.rs  responses.rs
crates/provider-server/src/models/: api_error.rs  mod.rs  openai.rs
crates/provider-server/src/services/: app_state.rs  config.rs  mod.rs  upstream.rs
docs/: architecture.md
