[package]
name = "provider-codex-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
tokio = { version = "1.0", features = ["fs", "sync"] }
thiserror = "1.0"
